--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.54.0",
     "next": "^15.4.5",
+    "openai": "^5.12.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
